# ddddocr-mnn

./: .gitignore  .gitmodules  CMakeLists.txt  OcrCaptcha.hpp  README.md  main.cpp  test.sh  words.h
.github/workflows/: build.yml
